# haxm

./: .gitignore  .travis.yml  API.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Developer Certification of Origin (DCO)  HaxmDriver.sln  LICENSE  README.md  Veneno.ros.md  dirs  readme.md
CheckTool/: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  Info.plist  README.md  arg_parser.cpp  arg_parser.h  common.cpp  common.h  cpuid.cpp  cpuid.h  feature_detector.cpp  feature_detector.h  main.cpp  os.h  os_darwin.cpp  os_darwin.h  os_windows.cpp  os_windows.h  version.rc
HaxmLoader/: HaxmLoader.sln  HaxmLoader.vcxproj  haxm_loader.c
Installer/: HaxmSetup.nsi  Log.nsh  README.md  RegOps.nsh  Resources.nsh  Service.nsh  Strings.nsh  UI.nsh  Uninstall.nsi  Utils.nsh  silent_install.bat
core/: chunk.c  cpu.c  cpuid.c  dump.c  dump_vmcs.c  emulate.c  emulate_ops.asm  ept.c  ept2.c  ept_tree.c  gpa_space.c  hax.c  haxlib.vcxproj  ia32.c  ia32_ops.asm  intr_exc.c  memory.c  memslot.c  mmio.c  name.c  page_walker.c  ramblock.c  sources  sources.props  vcpu.c  vm.c  vmcs_names.c  vmx.c  vmx_ops.asm  vtlb.c
dirs-Package/: dirs-Package.vcxproj
docs/: api.md  manual-linux.md  manual-macos.md  manual-windows.md
include/: asm.h  hax.h  hax_host_mem.h  hax_interface.h  hax_list.h  hax_release_ver.h  hax_types.h  hax_vcpu_state.h  vcpu_state.h
tests/: packages.config  test_emulator.cpp  tests.vcxproj
windows/: IntelHaxm.vcxproj  Makefile.inc  components.c  hax_entry.c  hax_entry.h  hax_event.c  hax_event_win.mc  hax_host_mem.c  hax_mem_alloc.c  hax_mm.c  hax_wrapper.c  (+4 more)
(+68 files in other folders)
